# databricks-scaffold

./: .gitignore  AGENT.md  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: volumespiller-auto-cleanup-proposal.md
example/: Showcase.ipynb
notebooks/: Benchmark.ipynb  Showcase.ipynb  exampleShowcase.ipynb
scaffold/: Example_usage.ipynb  __init__.py  core.py  example.ipynb
src/databricks_scaffold/: __init__.py  _internal.py  core.py  utils.py
tests/: conftest.py  test_core.py  test_core_connect.py  test_drop_on_error.py  test_init.py  test_utils.py
